<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/fal_background_pattern"
        android:id="@+id/transition_container"
>

    <Button
            android:id="@+id/button_page_sign_up"
            android:layout_width="wrap_content" android:layout_height="45dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/fal_action_sign_up"
            android:textColor="@color/falColorOnSecondary"
            app:layout_constraintStart_toStartOf="@+id/til_username"
            android:layout_marginTop="@dimen/fal_button_page_margin_top" app:layout_constraintTop_toTopOf="parent"/>

    <Button
            android:id="@+id/button_page_sign_in"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/fal_action_sign_in"
            android:textColor="@color/falColorOnSecondary_normal"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="@+id/til_username"
            android:layout_marginTop="@dimen/fal_button_page_margin_top"
            app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="@dimen/fal_login_edittext_width"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/button_page_sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:hintEnabled="true"
            android:layout_marginTop="@dimen/fal_edittext_username_margin_top_sign_up"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            android:textColorHint="@color/falColorOnSecondary_normal"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/login_error_appearance"
    >
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fal_label_username"
                android:drawableStart="@drawable/fal_ic_user_svg"
                android:drawableTint="@color/falColorOnSecondary"
                android:drawablePadding="8dp"
                android:textColor="@color/falColorOnSecondary"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="@dimen/fal_login_edittext_width"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/til_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:hintEnabled="true"
            android:layout_marginTop="@dimen/fal_edittext_password_margin_top_sign_up"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            android:textColorHint="@color/falColorOnSecondary_normal"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/login_error_appearance"
    >
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fal_label_password"
                android:drawableStart="@drawable/fal_ic_key_svg"
                android:drawableTint="@color/falColorOnSecondary"
                android:drawablePadding="8dp"
                android:textColor="@color/falColorOnSecondary"
                android:inputType="textPassword"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phone"
            android:layout_width="@dimen/fal_login_edittext_width"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/til_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:hintEnabled="true"
            android:layout_marginTop="@dimen/fal_edittext_phone_margin_top"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            android:textColorHint="@color/falColorOnSecondary_normal"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/login_error_appearance"
            android:visibility="invisible"
            tools:visibility="visible"
    >
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fal_label_phone"
                android:drawableStart="@drawable/fal_ic_phone_svg"
                android:drawableTint="@color/falColorOnSecondary"
                android:drawablePadding="8dp"
                android:textColor="@color/falColorOnSecondary"
                android:inputType="phone"
                android:imeOptions="actionDone"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/text_forget_password"
            app:layout_constraintTop_toBottomOf="@id/til_password"
            app:layout_constraintEnd_toEndOf="@id/til_password"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/fal_action_forget_password_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textColor="@color/falColorOnSecondary"
            android:text="@string/fal_action_forget_password"
            app:layout_constraintHorizontal_bias="1.0"
            android:gravity="center_vertical"
            android:visibility="invisible"
            tools:visibility="visible"
    />

    <TextView
            android:id="@+id/text_or_signin_with"
            app:layout_constraintTop_toBottomOf="@id/button_sign"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/fal_label_sign_with_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textColor="@color/falColorOnSecondary"
            android:text="@string/fal_label_or_signin_in_with"
            android:gravity="center_vertical"
            android:visibility="invisible"
            tools:visibility="visible"
    />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="280dp"
            android:layout_height="36dp"
            android:id="@+id/cl_social_media_options"
            app:layout_constraintTop_toBottomOf="@+id/text_or_signin_with"
            android:layout_marginTop="@dimen/fal_social_media_buttons_margin_top"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:visibility="invisible"
            tools:visibility="visible"
    >
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
            android:id="@+id/text_need_help"
            app:layout_constraintTop_toBottomOf="@+id/text_or_signin_with"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textColor="@color/falColorOnSecondary"
            android:text="@string/fal_action_need_help"
            android:visibility="invisible"
            tools:visibility="visible"
            android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1.0"
            android:gravity="center_vertical"

    />

    <Button
            android:id="@+id/button_sign"
            android:layout_width="@dimen/fal_login_button_sing_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="74dp"
            android:text="@string/fal_action_sign_up"
            app:layout_constraintTop_toBottomOf="@id/til_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/fal_next_button_bg_selector"
            android:textColor="@drawable/fal_next_button_text_selector"
            android:textAllCaps="false"
    />

    <ProgressBar
            android:id="@+id/progressbar"
            android:theme="@style/ColoredProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="invisible"
    />

</androidx.constraintlayout.widget.ConstraintLayout>